<resources>
    <string name="app_name">BonfireChat</string>

    <string name="title_conversations">Conversations</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_credits">About Bonfire Chat</string>
    <string name="action_add_conversation">New Conversation</string>
    <string name="action_add_contact">New Contact</string>

    <string name="new_contact">New Contact</string>
    <string name="search_contact_by_name">Search By Name:</string>
    <string name="title_activity_contact_details">Contact Details</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_save">Save</string>
    <string name="title_activity_search_user">Look Up A User</string>

    <string name="share_my_identity">Share Your ID</string>

    <string name="message_details">Message Details</string>
    <string name="Search">Search</string>
    <string name="scan_nfc">Use NFC</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_create_conversation">Start Conversation</string>
    <string name="action_edit_title">Edit Title</string>
    <string name="action_share_image">Send Image</string>
    <string name="action_info">Info</string>
    <string name="action_set_path">Set Path</string>
    <string name="action_clear_path">Clear Path</string>
    <string name="action_debug_info">Debug Info</string>
    <string name="action_search">Search</string>
    <string name="action_scan_qr_code">Scan QR code</string>
    <string name="contact">Contact</string>
    <string name="title_welcome">Welcome!</string>
    <string name="title_edit_account">Edit Your Account</string>
    <string name="protocol_bluetooth">Bluetooth</string>
    <string name="protocol_wifi_direct">WiFi Direct</string>
    <string name="protocol_cloud">Cloud</string>
    <string name="nfc_is_not_available">NFC is not available</string>
    <string name="registering_title">Registering …</string>
    <string name="registering_message">This will take only a few seconds.</string>
    <string name="registering_failed">Registering failed</string>
    <string name="exception_only_fresh_envelopes">This method only sends fresh envelopes</string>

    <string name="action_login_ok">Continue</string>
    <string name="login_phone_number_hint">Phone Number (optional)</string>
    <string name="login_nickname_hint">Choose A Nickname</string>

    <string name="share_text">I\'m a happy Bonfire Chat user!</string>

    <string name="message_location">Location</string>
    <string name="toast_location_not_available">Your location is not available.</string>
    <string name="image">picture</string>
    <string name="location">location</string>
    <string name="nickname_error">please choose a nickname containing only the letters a to z, digits and underscores</string>
    <string name="phone_error">please provide a valid phone number</string>
    <string name="registering">Registering with server …</string>
    <string name="registering_error">Could not register with server, please try again later.\nAre you connected to the internet?</string>
    <string name="nickname_already_taken">this nickname is already taken</string>

    <string name="next">next</string>
    <string name="got_it">got it</string>
    <string name="letsgo">Let\'s go</string>

    <string name="tutorial_messages_change_title">change title</string>
    <string name="tutorial_messages_change_title_desc">click here to change the title of this conversation</string>
    <string name="tutorial_messages_share_image">send an image</string>
    <string name="tutorial_messages_share_image_desc">click here to send an image in a message</string>
    <string name="tutorial_messages_share_location">share location</string>
    <string name="tutorial_messages_share_location_desc">click here to share your current location</string>
    <string name="tutorial_messages_details">Last but not least</string>
    <string name="tutorial_messages_details_desc">to see details about a message\'s transmission, long-click on it and select the details icon</string>
    <string name="tutorial_contacts_your_contact">your contact data</string>
    <string name="tutorial_contacts_your_contact_desc">click here to share your contact data with others</string>
    <string name="tutorial_contacts_scan_qr">scan QR-code</string>
    <string name="tutorial_contacts_scan_qr_desc">click here to scan a QR-code and add a contact</string>
    <string name="tutorial_contacts_search">search for contacts</string>
    <string name="tutorial_contacts_search_desc">click here to search for contact on the internet</string>
    <string name="tutorial_main_welcome">Welcome!</string>
    <string name="tutorial_main_welcome_desc">you can add contacts and start conversations</string>
    <string name="tutorial_main_your_contact">your contact data</string>
    <string name="tutorial_main_your_contact_desc">click here to share your contact data with others</string>

    <string name="action_details">details</string>

    <string name="action_refresh">Refresh</string>
    <string name="still_sending">message is on its way…</string>
    <string name="details_label_debug">information for nerds:</string>
    <string name="details_label_via">via:</string>
    <string name="details_label_encrypted">encrypted transfer</string>
    <string name="details_label_properties">properties:</string>
    <string name="details_label_sent">sent:</string>
    <string name="details_from">from:</string>
    <string name="details_to">to:</string>
    <string name="details_label_retries">attempts to send</string>
    <string name="details_label_uuid">UUID:</string>
    <string name="action_retry">send again</string>
    <string name="details_retry_send">retry sending</string>
    <string name="details_label_error">message could not be sent</string>
    <string name="details_label_error_desc">An error occurred while trying to send the message. It probably didn\'t reach its recipient.</string>
    <string name="details_label_errormessage">error:</string>
    <string name="cant_resend_received_message">can\'t resend a message that you received</string>
    <string name="contact_location">Contact\'s location</string>
    <string name="notice_no_location_for_contact">There is no location available for this contact.</string>
    <string name="details_label_routing">routing technique:</string>
    <string name="routing_flooding">Flooding</string>
    <string name="routing_dsr">DSR</string>
    <string name="routing_unknown">unknown</string>
    <string name="no_location_for_contact">no location available</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_phone">Phone Number:</string>
    <string name="label_publickey">Public Key:</string>
    <string name="label_last_known_location">Last known location:</string>
    <string name="label_stats">Statistics:</string>
    <string name="share_location_periodically">Share my location with this contact periodically</string>
    <string name="bluetooth_needed_for_working">This App needs Bluetooth enabled to function correctly.</string>
    <string name="please_enable_bluetooth" >Please enable Bluetooth</string>
    <string name="enable_bluetooth" >Enable Bluetooth</string>
    <string name="name_of_app">Bonfire</string>
    <string name="date_time">Date/Time</string>
    <string name="nfc_instructions">Put your phone back to back to another device in order to share your contact details via NFC</string>
    <string name="share_facebook">Share with Facebook</string>
    <string name="share_twitter">Share with Twitter</string>
    <string name="send_location">Send location</string>
    <string name="info">Info</string>
    <string name="edit_account">Edit account</string>
    <string name="account">Account</string>
    <string name="communication_channels">Communication channels</string>
    <string name="use_bluetooth">Use Bluetooth</string>
    <string name="use_wifi">Use Wi-Fi (peer-to-peer)</string>
    <string name="use_mobile_data">Use mobile data / Wi-Fi</string>
    <string name="misc">Miscellaneous</string>
    <string name="send_debug_to_dashboard">Send debug information to Dashboard</string>
    <string name="show_internal_information">Show internal information</string>
    <string name="about_the_app">About BonfireChat</string>
    <string name="developed_at">Developed at TU Darmstadt</string>
    <string name="developed_by">by Johannes, Jonas, Max, Matthias and Simon</string>
    <string name="update">Update</string>
    <string name="load_last_dev_build">Load last development build</string>
</resources>
