<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/account">
        <Preference android:title="@string/edit_account" android:key="edit_account"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/communication_channels">
        <CheckBoxPreference android:key="enable_BluetoothProtocol" android:defaultValue="true"
            android:title="@string/use_bluetooth"></CheckBoxPreference>

        <CheckBoxPreference android:key="enable_WifiProtocol" android:defaultValue="true"
            android:title="@string/use_wifi"></CheckBoxPreference>

        <CheckBoxPreference android:key="enable_GcmProtocol" android:defaultValue="true"
            android:title="@string/use_mobile_data"></CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc">

        <CheckBoxPreference android:key="debugSendToDashboard" android:defaultValue="false"
            android:title="@string/send_debug_to_dashboard"></CheckBoxPreference>


        <Preference android:key="debugShow"
            android:title="@string/show_internal_information"></Preference>


        <PreferenceScreen android:title="@string/about_the_app">

            <Preference android:title="@string/developed_at"
                android:summary="@string/developed_by"/>

            <Preference android:title="Version x.x.x" android:key="version_number"/>

            <Preference android:title="Credits" android:summary="Icon by Pixel Buddha (CC-BY 3.0)"/>

        </PreferenceScreen>

        <Preference android:title="@string/update" android:summary="@string/load_last_dev_build" android:key="update_dev"/>
        <Preference android:title="Homepage öffnen" android:key="goto_homepage"/>

    </PreferenceCategory>



</PreferenceScreen>