<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.tudarmstadt.informatik.bp.bonfirechatui.MessagesActivity">

    <item android:id="@+id/action_edit_title" android:title="@string/action_edit_title"
        android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_edit"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_share_image" android:title="@string/action_share_image"
        android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_gallery"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_share_location" android:title="@string/send_location"
        android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_compass"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_show_contact_location" android:title="@string/contact_location"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_settings" android:title="@string/info"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_set_path" android:title="@string/action_set_path"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_clear_path" android:title="@string/action_clear_path"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_show_debug" android:title="@string/action_debug_info"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_send_location_udp" android:title="@string/send_a_location_udp_cast"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

</menu>
