<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_scan_nfc" android:title="@string/scan_nfc"
        android:showAsAction="ifRoom" android:icon="@drawable/ic_tap_and_play_black_24dp"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_scan_qr" android:title="@string/action_scan_qr_code"
        android:showAsAction="ifRoom" android:icon="@drawable/ic_fullscreen_black_24dp"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_search" android:title="@string/Search"
        android:showAsAction="ifRoom" android:icon="@drawable/ic_search_black_24dp"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_update_contacts" android:title="@string/action_refresh"
        android:showAsAction="never" tools:ignore="AppCompatResource" />

</menu>
