<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_show_contact_location" android:title="@string/contact_location"
        android:showAsAction="always" android:icon="@android:drawable/ic_menu_compass"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_contact_details" android:title="@string/action_edit"
        android:showAsAction="always" android:icon="@android:drawable/ic_menu_edit"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_delete"
        tools:ignore="AppCompatResource" />

</menu>