<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background">


    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:text="Bonfire" android:textSize="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#99ffffff"
        android:padding="15dp"
        android:layout_marginBottom="20dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/login_nickname_hint"
            android:ems="10"
            android:id="@+id/txt_nickname" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/login_phone_number_hint"
            android:ems="10"
            android:id="@+id/txt_phoneNumber"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

    <Button
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/action_login_ok"
        android:id="@+id/save"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        />


</RelativeLayout>